# instagram-post-scrapper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  exceptions.py  main.py
app/api/: competition.py  endpoints.py
app/models/: __init__.py  competition.py  raw_post.py
app/schemas/: competition.py  post.py  response.py
app/services/: __init__.py
app/services/instagram/: __init__.py  client.py  exceptions.py  scraper.py
app/workers/pipeline/: __init__.py  extractor.py  orchestrator.py  repository.py  resolver.py  schemas.py  tracker.py
docs/: architecture.md  code_standards.md  folder_structure.md  future_guidelines.md
